Refactor styling to use SASS

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
+destination: ./wwwroot
 name: I'm Adam Giese
 greeting: Howdy!
 formurl: http://goo.gl/forms/aWizIEnZj3MrFsF03
 formcta: "Need A Site?"
 exclude: ['scss']
 baseurl: https://adamgiese.github.io/
+sass:
+  sass_dir: styles
