--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,6 @@ formurl: http://goo.gl/forms/aWizIEnZj3MrFsF03
 formcta: "Need A Site?"
 exclude: ['scss']
 baseurl: https://adamgiese.github.io/
+permalink: /blog/:title
 sass:
   sass_dir: styles
